--- a/.github/workflows/edit-asana-task.yml
+++ b/.github/workflows/edit-asana-task.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: psrenergy/asana-integration@master
         with:
-          action: 'edit'
-          asana-secret: ${{ secrets.ASANA_SECRET }}
-          asana-workspace-id: '186957727118538'
-          asana-project-id: '1204414137902419'
+          action: "edit"
+          asana-secret: "${{ secrets.ASANA_SECRET }}"
+          asana-workspace: "${{ secrets.ASANA_WORKSPACE }}"
+          asana-project: "${{ secrets.ASANA_PROJECT }}"
