--- a/.github/workflows/add-participant-asana-task.yml
+++ b/.github/workflows/add-participant-asana-task.yml
@@ -1,6 +1,6 @@
 name: add-participant-asana-task
 on:
-  issue_commented:
+  issue_comment:
     types: [created]
 
 concurrency:
@@ -8,6 +8,7 @@ concurrency:
 
 jobs:
   add-participant-asana-task:
+    if: ${{ !github.event.issue.pull_request }}
     runs-on: self-hosted
     steps:
       - uses: psrenergy/asana-integration@master
